--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,64 +1,34 @@
-<div class="container  mat-app-background">
-    <div class="calendar">
-        <div class="header">February 2024</div>
-        <div class="days">
-            <div class="day">Sun</div>
-            <div class="day">Mon</div>
-            <div class="day">Tue</div>
-            <div class="day">Wed</div>
-            <div class="day">Thu</div>
-            <div class="day">Fri</div>
-            <div class="day">Sat</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <mat-card>
+                <mat-calendar [(selected)]="selected" (selectedChange)="selected !== null && fetchEvents(selected)"></mat-calendar>
+            </mat-card>
         </div>
-        <div class="dates">
-            <div class="date">-</div>
-            <div class="date">-</div>
-            <div class="date">1</div>
-            <div class="date">2</div>
-            <div class="date">3</div>
-            <div class="date">4</div>
-            <div class="date">5</div>
-            <div class="date">6</div>
-            <div class="date">7</div>
-            <div class="date">8</div>
-            <div class="date">9</div>
-            <div class="date">10</div>
-            <div class="date">11</div>
-            <div class="date">12</div>
-            <div class="date">13</div>
-            <div class="date">14</div>
-            <div class="date">15</div>
-            <div class="date">16</div>
-            <div class="date">17</div>
-            <div class="date">18</div>
-            <div class="date">19</div>
-            <div class="date">20</div>
-            <div class="date">21</div>
-            <div class="date">22</div>
-            <div class="date">23</div>
-            <div class="date">24</div>
-            <div class="date">25</div>
-            <div class="date">26</div>
-            <div class="date">27</div>
-            <div class="date">28</div>
-            <div class="date">-</div>
-            <div class="date">-</div>
-        </div>
-    </div>
-    
-    <h3 class="panel-heading">Lists</h3>
-    
-    <div class="panel panel-default">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">  
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>    
-          
+        <div class="col-md-6">
+            <table mat-table [dataSource]="dataSource">  
+                <ng-container matColumnDef="event">
+                    <th mat-header-cell *matHeaderCellDef>Event</th>
+                    <td mat-cell *matCellDef="let element">
+                        <a [routerLink]="['/event', element.riliEventID]">{{ element.name }}</a>
+                    </td>
+                </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
-        </table>
+                <ng-container matColumnDef="location">
+                    <th mat-header-cell *matHeaderCellDef>Location</th>
+                    <td mat-cell *matCellDef="let element">{{ element.location }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef>Description</th>
+                    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+                </ng-container>
+        
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>    
+              </table>
+        </div>
     </div>
-    
-    </div> 
+</div>
+<p>Selected date: {{ selected }}</p>
+  
